<resources>
    <string name="app_name">TaylorFit</string>
    <string name="default_loading_message">Loading, Please wait . . .</string>
    <string name="ok">OK</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi_there">Hi there!</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="already_have_an_account">ALREADY HAVE AN ACCOUNT?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="name">NAME</string>
    <string name="store_name">STORE NAME</string>
    <string name="password">PASSWORD</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_here">Sign in here</string>
    <string name="don_t_have_an_account">DON\'T HAVE AN ACCOUNT?</string>
    <string name="proceed">PROCEED</string>
    <string name="gig_title_message">Give this Gig a title to remember easily</string>
    <string name="gig_title_hint">Graduation Dinner</string>
    <string name="gig_style_message">What type of style does your customer want?</string>
    <string name="gig_style_hint">Long Gown</string>
    <string name="customer_hint_name">Olayinka Folashade</string>
    <string name="customer_name_message">Add your customer\'s name here</string>
    <string name="customer_number_hint">08031234564</string>
    <string name="customer_number_message">Add your customer\'s Phone number here</string>
    <string name="customer_gender_message">What is your customer\'s gender?</string>
    <string name="customer_gender_hint">Female</string>
    <string name="empty_field">Empty Field</string>
    <string name="let_s_get_the_measurement_started_inches">Let\'s get the measurement started (inches)</string>
    <string name="gig_due_date_message">When are you going to finish sewing the cloth?</string>
    <string name="gig_due_date_hint">12th November 2020</string>
    <string name="gig_price_hint">N5,000</string>
    <string name="gig_price_message">How much are you charging for the gig?</string>
    <string name="upload_pictures_optional">UPLOAD PICTURES (OPTIONAL)</string>
    <string name="remove"><u>Remove</u></string>
    <string name="note_optional">NOTE (OPTIONAL)</string>
    <string name="put_in_your_additional_information_here">Put in your additional information here</string>
    <string name="save">save</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="shoulder_to_shoulder">Shoulder To Shoulder</string>
    <string name="sleeve_length">Sleeve Length</string>
    <string name="half_sleeve">Half Sleeve</string>
    <string name="arm_round">Arm Round</string>
    <string name="arm_hole">Arm Hole</string>
    <string name="full_length">Full Length</string>
    <string name="hip_round">Hip Round</string>
    <string name="hip_line">Hip Line</string>
    <string name="natural_waist">Natural Waist</string>
    <string name="under_bust">Under Bust</string>
    <string name="bust_round">Bust Round</string>
    <string name="bust_line">Bust Line</string>
    <string name="neck_circumference">Neck Circumference</string>
    <string name="chest_circumference">Chest Circumference</string>
    <string name="shoulder_breadth">Shoulder Breadth</string>
    <string name="waist_circumference">Waist Circumference</string>
    <string name="hips_circumference">Hips Circumference</string>
    <string name="thigh">Thigh</string>
    <string name="calf">Calf</string>
    <string name="wrist_circumference">Wrist Circumference</string>
    <string name="arm_length">Arm Length</string>
    <string name="price">PRICE</string>
    <string name="style">STYLE</string>
    <string name="due_date">DUE DATE</string>
    <string name="pending_jobs">Pending Jobs</string>
    <string name="completed_jobs">Completed Jobs</string>
    <string name="full_name_constant">FULL NAME</string>
    <string name="phone_number_constant">PHONE NUMBER</string>
    <string name="gig_title">GIG TITLE</string>
    <string name="view_measurement"><u>View Measurement</u></string>
    <string name="mark_as_done">MARK AS DONE</string>
    <string-array name="list_of_image_options">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>
    <string name="create_shop">Create Shop</string>
    <string name="take_measurement">Take Measurement</string>
    <string name="save_gig">Save Gig</string>
    <string name="create_shop_description">Create your own shop from scratch by yourself</string>
    <string name="take_measurement_description">Take the measurement details of your customer per gig available</string>
    <string name="save_gig_description">Save the gig details of your customer available</string>
    <string name="skip">Skip</string>
    <string name="here_are_your_measurements">Here are your Measurements</string>
    <string name="gender">Gender</string>
    <string name="gig_completed">Gig Completed, Well-done</string>
    <string name="view_additional_info"><u>View Additional Info</u></string>
    <string name="addtional_note">Additional Note</string>
    <string name="no_add_note">No additional Note</string>
    <string name="go">GO</string>
</resources>
