<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tailorfit.android.tailorfitapp.customerdetails.CustomerDetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/images_viewpager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/full_name_constant_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="0dp"
                android:layout_height="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent"
                app:tabBackground="@drawable/tab_selector_dark"
                app:layout_constraintBottom_toTopOf="@+id/full_name_constant_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:tabGravity="center"
                app:tabIndicatorGravity="bottom"
                app:tabIndicatorHeight="0dp"
                app:tabPaddingEnd="8dp"
                app:tabPaddingStart="8dp" />


            <TextView
                android:id="@+id/full_name_constant_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/full_name_constant"
                android:textColor="@color/textColorPrimaryGrey"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/images_viewpager" />

            <TextView
                android:id="@+id/customer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/lato"
                tools:text="@string/customer_hint_name"
                android:textColor="@color/textColorDark"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/full_name_constant_text_view" />

            <TextView
                android:id="@+id/phone_constant_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/phone_number_constant"
                android:textColor="@color/textColorPrimaryGrey"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/customer_name" />

            <TextView
                android:id="@+id/customer_number_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/lato"
                android:text="@string/customer_number_hint"
                android:textColor="@color/textColorDark"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/phone_constant_text_view" />

            <TextView
                android:id="@+id/style_constant_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/style"
                android:textColor="@color/textColorPrimaryGrey"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/customer_number_text_view" />

            <TextView
                android:id="@+id/style_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/lato"
                tools:text="@string/gig_style_hint"
                android:textColor="@color/textColorDark"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/style_constant_text_view" />

            <TextView
                android:id="@+id/gig_title_constant_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/gig_title"
                android:textColor="@color/textColorPrimaryGrey"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/style_text_view" />

            <TextView
                android:id="@+id/gig_title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/lato"
                android:text="@string/gig_title_hint"
                android:textColor="@color/textColorDark"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/gig_title_constant_text_view" />

            <TextView
                android:id="@+id/gig_due_date_constant_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/due_date"
                android:textColor="@color/textColorPrimaryGrey"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/gig_title_text_view" />

            <TextView
                android:id="@+id/gig_due_date_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/lato"
                android:text="@string/gig_due_date_hint"
                android:textColor="@color/primaryColorChocolate"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/gig_due_date_constant_text_view" />

            <TextView
                android:id="@+id/gig_price_constant_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/price"
                android:textColor="@color/textColorPrimaryGrey"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/gig_due_date_text_view" />

            <TextView
                android:id="@+id/gig_price_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/lato"
                android:text="@string/gig_price_hint"
                android:textColor="@color/textColorDark"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/gig_price_constant_text_view" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:fontFamily="@font/lato_bold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:id="@+id/view_measurement_text_view"
                app:layout_constraintTop_toBottomOf="@id/gig_price_text_view"
                android:textColor="@color/secondaryColorChocolate"
                android:text="@string/view_measurement"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/is_done_button"
                style="@style/AppTheme.HorizontalButtonAppearance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"
                android:text="@string/mark_as_done"
                android:visibility="gone"
                android:textColor="@color/textColorPrimaryWhite"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_measurement_text_view" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>
