<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="customerInfo"
            type="com.tailorfit.android.tailorfitapp.models.response.CustomerInfoResponseModel" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/textColorPrimaryWhite"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/individual_card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="7dp"
            app:strokeColor="@color/textColorPrimaryGrey"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/customer_name_individual"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/textColorDark"
                    android:textSize="20sp"
                    app:customerName="@{customerInfo.customerName}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/customer_hint_name" />

                <ImageView
                    android:id="@+id/gender_image"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    app:gender="@{customerInfo.customerGender}"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/style_placeholder"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/style"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/customer_name_individual" />


                <TextView
                    android:id="@+id/style_name_individual"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/textColorDark"
                    android:textSize="14sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/style_placeholder"
                    app:styleName="@{customerInfo.styleName}"
                    tools:text="@string/gig_style_hint" />

                <TextView
                    android:id="@+id/date_placeholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/style_name_individual"
                    android:text="@string/due_date" />


                <TextView
                    android:id="@+id/date_text_individual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/primaryColorChocolate"
                    android:textSize="14sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/date_placeholder"
                    app:styleDate="@{customerInfo.deliveryDate}"
                    tools:text="@string/gig_due_date_hint" />

                <TextView
                    android:id="@+id/price_placeholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textSize="12sp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/style_name_individual"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/price_text_individual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/green"
                    android:textSize="14sp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/date_placeholder"
                    app:stylePrice="@{customerInfo.price}"
                    tools:text="@string/gig_price_hint" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>


</layout>