<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        tools:context="com.tailorfit.android.tailorfitapp.signup.SignUpFragment">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="@string/welcome_back"
            android:textColor="@color/textColorDark"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/sign_in_here_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/sign_in_here_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="@string/sign_in_here"
            android:textColor="@color/textColorPrimaryGrey"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@id/_phone_edit_text_container"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_text" />


        <FrameLayout
            android:id="@+id/_phone_edit_text_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            app:layout_constraintBottom_toTopOf="@id/_password_edit_text_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_in_here_text">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>
        </FrameLayout>


        <FrameLayout
            android:id="@+id/_password_edit_text_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@id/signin_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/_phone_edit_text_container">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>
        </FrameLayout>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/signin_button"
            style="@style/AppTheme.HorizontalButtonAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_in"
            android:textColor="@color/textColorPrimaryWhite"
            app:layout_constraintBottom_toTopOf="@id/already_have_account_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/_password_edit_text_container" />

        <TextView
            android:id="@+id/already_have_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/textColorPrimaryGrey"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/sign_int_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signin_button"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/sign_int_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="@string/sign_up"
            android:textColor="@color/secondaryColorChocolate"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/already_have_account_text"
            app:layout_constraintTop_toBottomOf="@id/signin_button"
            app:layout_constraintVertical_chainStyle="packed" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>